--- a/src/YARPService/YARPService.csproj
+++ b/src/YARPService/YARPService.csproj
@@ -21,7 +21,7 @@
     <PackageReference Include="Microsoft.ReverseProxy" Version="1.0.0-preview.7.*" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
-    <PackageReference Include="Serilog.Extensions.Hosting" Version="$(SerilogPackageVersion)" />
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="4.1.0" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
     <PackageReference Include="Serilog.Enrichers.Thread" Version="$(SerilogPackageVersion)" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="$(SerilogPackageVersion)" />
