--- a/src/ChaosResilientService/appsettings.json
+++ b/src/ChaosResilientService/appsettings.json
@@ -1,9 +1,35 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.InfluxDB" ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/log.txt",
+          "rollingInterval": "Day"
+        }
+      }
+      /*{
+        "Name": "InfluxDB",
+        "Args": {
+          "applicationName": "testApp",
+          "instanceName": "testInstance",
+          "uri": "http://localhost:8086",
+          "dbName": "_internal"
+        }
+      }*/
+    ],
+    //"Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "Chaos"
     }
   },
   "AllowedHosts": "*",
@@ -29,6 +55,13 @@
         "InjectionRate": 0.5,
         "LatencyMs": 2000,
         "Exception": "System.OperationCanceledException"
+      },
+      {
+        "OperationKey": "GetSomeData",
+        "Enabled": true,
+        "InjectionRate": 0.9,
+        "LatencyMs": 0,
+        "Exception": "System.InvalidOperationException"
       }
     ]
   }
