--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -27,18 +27,18 @@
 
   <!-- NuGet dependencies shared across projects -->
   <PropertyGroup>
-    <MicrosoftAspNetCorePackageVersion>6.0.0-preview.1.*</MicrosoftAspNetCorePackageVersion>
-    <MicrosoftEntityFrameworkCorePackageVersion>6.0.0-preview.1.*</MicrosoftEntityFrameworkCorePackageVersion>
-    <MicrosoftExtensionsPackageVersion>6.0.0-preview.1.*</MicrosoftExtensionsPackageVersion>
+    <MicrosoftAspNetCorePackageVersion>6.0.0-rc.2.*</MicrosoftAspNetCorePackageVersion>
+    <MicrosoftEntityFrameworkCorePackageVersion>6.0.0-rc.2.*</MicrosoftEntityFrameworkCorePackageVersion>
+    <MicrosoftExtensionsPackageVersion>6.0.0-rc.2.*</MicrosoftExtensionsPackageVersion>
     <NuGetPackageVersion>5.4.0</NuGetPackageVersion>
     <AspNetCoreHealthChecksVersion>5.0.1</AspNetCoreHealthChecksVersion>
-    <AspNetCoreHealthChecksSqlServerVersion>5.0.2</AspNetCoreHealthChecksSqlServerVersion>
+    <AspNetCoreHealthChecksSqlServerVersion>5.0.3</AspNetCoreHealthChecksSqlServerVersion>
     <AspNetCoreHealthChecksIdSrvVersion>5.0.1</AspNetCoreHealthChecksIdSrvVersion>
     <AspNetCoreHealthChecksUIVersion>5.0.1</AspNetCoreHealthChecksUIVersion>
     <SwashbuckleVersion>5.6.3</SwashbuckleVersion>
     <ServicesSharedVersion>1.1.1-prerelease</ServicesSharedVersion>
     <VSContainersVersion>1.10.9</VSContainersVersion>
-    <NewtonsoftVersion>12.0.3</NewtonsoftVersion>
+    <NewtonsoftVersion>13.0.1</NewtonsoftVersion>
     <NLogVersion>4.7.7</NLogVersion>
     <NLogWebVersion>4.10.0</NLogWebVersion>
     <SerilogPackageVersion>3.1.0</SerilogPackageVersion>
