--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -27,9 +27,9 @@
 
   <!-- NuGet dependencies shared across projects -->
   <PropertyGroup>
-    <MicrosoftAspNetCorePackageVersion>6.0.0-rc.2.*</MicrosoftAspNetCorePackageVersion>
-    <MicrosoftEntityFrameworkCorePackageVersion>6.0.0-rc.2.*</MicrosoftEntityFrameworkCorePackageVersion>
-    <MicrosoftExtensionsPackageVersion>6.0.0-rc.2.*</MicrosoftExtensionsPackageVersion>
+    <MicrosoftAspNetCorePackageVersion>6.0.0</MicrosoftAspNetCorePackageVersion>
+    <MicrosoftEntityFrameworkCorePackageVersion>6.0.0</MicrosoftEntityFrameworkCorePackageVersion>
+    <MicrosoftExtensionsPackageVersion>6.0.0</MicrosoftExtensionsPackageVersion>
     <NuGetPackageVersion>5.4.0</NuGetPackageVersion>
     <AspNetCoreHealthChecksVersion>5.0.1</AspNetCoreHealthChecksVersion>
     <AspNetCoreHealthChecksSqlServerVersion>5.0.3</AspNetCoreHealthChecksSqlServerVersion>
