--- a/src/Angular.Bootstrapped/ClientApp/package.json
+++ b/src/Angular.Bootstrapped/ClientApp/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/platform-server": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "angular-auth-oidc-client": "^13.1.0",
     "bootstrap": "^5.1.0",
     "jquery": "^3.5.1",
+    "ngx-cookie-service": "^13.1.2",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
@@ -46,6 +48,5 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "typescript": "~4.5.3"
-  },
-  "optionalDependencies": {}
+  }
 }
