--- a/src/YARPService/YARPService.csproj
+++ b/src/YARPService/YARPService.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -27,6 +27,6 @@
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-    <PackageReference Include="Serilog.Sinks.InfluxDB.Syslog" Version="2.0.3" />
+    <PackageReference Include="Serilog.Sinks.InfluxDB.Syslog" Version="2.1.0" />
   </ItemGroup>
 </Project>
