--- a/.gitignore
+++ b/.gitignore
@@ -352,3 +352,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 /src/LoginService/.logsinternal-YARPservice.txt
+/src/Orchard.Core.OpenIddict/App_Data
